issue 62 change default perm size to 64m .